Bug #27816: enhance design, refactor code
Everything else squashed together
* Add noscript warning for HTML incompatible forms
* Simplify setting of properties
* Support creation via PUT
* Implement copy of objects
* Add layout and description for search form

--- a/management/univention-management-console-module-udm/var/www/univention/udm/css/style.css
+++ b/management/univention-management-console-module-udm/var/www/univention/udm/css/style.css
@@ -41,3 +41,23 @@ h1 {
 	position: relative;
 	right: 0;
 }
+
+input[type=image][name=jpegPhoto-preview] {
+	max-width: 250px;
+}
+
+details {
+	margin-inline-start: 2px;
+	margin-inline-end: 2px;
+	padding-block-start: 0.35em;
+	padding-inline-start: 0.75em;
+	padding-inline-end: 0.75em;
+	padding-block-end: 0.625em;
+	min-inline-size: min-content;
+	border-width: 0;
+	border-top-width: 2px;
+	border-style: groove;
+	border-color: threedface;
+	border-image: initial;
+	margin-bottom: 0.5em;
+}
